--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "type": "git",
     "url": "https://github.com/markpots5/mvt2geojsonio.git"
   },
-  "author": "",
+  "author": "markpots5",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/markpots5/mvt2geojsonio/issues"
